Change design for tablets

--- a/code/index.html
+++ b/code/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>The Daily Sleep</The Daily Sleep>
+    <title>The Daily Sleep</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <header>
-        <img class="logo" src="the daily sleep.png" logo with letters zzz">
+        <img class="logo" src="the daily sleep.png" alt="logo with letters zzz">
 
         <h1>The Daily Sleep</h1>
 
