Change for tablet.

--- a/code/index.html
+++ b/code/index.html
@@ -36,7 +36,7 @@
 
         </div>
     </section>
-
+<div class="feed">
     <section class="small-news">
         <img src="grey.webp" />
 
@@ -58,6 +58,7 @@
     <section class="small-news">
         <img src="juice.jpg" />
         <div>
+            <!--Content below is called "Feed".-->
             <h2>Freshly squeezed and cold-pressed juice – the difference</h2>
 
         </div>
@@ -70,7 +71,7 @@
             <p>Rose is a rose is a rose is a rose. Rose is a rose is a rose is a rose. Rose is a rose ...</p>
         </div>
     </section>
-
+</div>
 </body>
 
 </html>
