Add media queries for desktop. Change the design. Add more content.

--- a/code/index.html
+++ b/code/index.html
@@ -68,41 +68,40 @@
         <section class="small-news">
             <img src="rose2.jpg" />
             <div>
-                <h2>Poem: Rose is a rose.</h2>
+                <h2>Poem: Rose is a rose</h2>
                 <p>Rose is a rose is a rose is a rose. Rose is a rose is a rose is a rose. Rose is a rose ...</p>
             </div>
         </section>
 
         <section class="small-news">
-            <img src="grey.webp" />
+            <img src="gravel .jpg" />
 
             <div>
-                <h2>The color grey</h2>
-                <p>Grey is an intermediate color between black and white. It is a neutral or achromatic color, meaning
-                    literally that it is "without color”...</p>
+                <h2>Different types of gravel</h2>
+                <p>There are many types of gravel: Pea gravel, 
+                    River rock, Aquarium gravel ... </p>
             </div>
         </section>
         <section class="small-news">
-            <img src="remote control.jpg" />
+            <img src="wall paint.jpg" />
             <div>
-                <h2>User manual for a remote control</h2>
-                <p>Caution: Before using a remote control, please read ...</p>
+                <h2>Wall paint drying times: A comprehensive guide</h2>
+                <p>An in-depth exploration of various wall paint drying times ...</p>
             </div>
         </section>
         <section class="small-news">
-            <img src="juice.jpg" />
+            <img src="stapler.jpg" />
             <div>
-                
-                <h2>Freshly squeezed and cold-pressed juice – the difference</h2>
-
+                <h2>A catalog of stapler models throughout history</h2>
+                <p>An exhaustive list and analysis of stapler models from the past century, examining their design evolution and functionality.</p>
             </div>
         </section>
 
         <section class="small-news">
-            <img src="rose2.jpg" />
+            <img src="clock.jpg" />
             <div>
-                <h2>Poem: Rose is a rose.</h2>
-                <p>Rose is a rose is a rose is a rose. Rose is a rose is a rose is a rose. Rose is a rose ...</p>
+                <h2>The Study of Clock Ticking Sounds in Different Environments</h2>
+                <p>An academic investigation into the auditory characteristics of clock ticking sounds, considering factors like room acoustics ...</p>
             </div>
         </section>
 
