Change image size and add alt text

--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img class="logo" src="the daily sleep.png" alt="logo with letters zzz">
+        <img class="logo" src="assets/thedailysleep.png" alt="logo with letters zzz">
 
         <h1>The Daily Sleep</h1>
 
@@ -29,7 +29,7 @@
 
 
     <section class="intro">
-        <img class="intro-image" src="laundy 2.jpg" />
+        <img class="intro-image" src="assets/laundry.jpg" alt="Image with a laundry machine" />
         <div class="intro-text">
             <h2>Short story: Laundry day</h2>
             <p>She always did her laundry on mondays. Monday, the first day of the week ... </p>
@@ -39,7 +39,7 @@
     <!--Content below is called "Feed".-->
     <div class="feed">
         <section class="small-news">
-            <img src="grey.webp" />
+            <img src="assets/grey.jpg" alt="Image with grey color" />
 
             <div>
                 <h2>The color grey</h2>
@@ -49,7 +49,7 @@
         </section>
 
         <section class="small-news">
-            <img src="remote control.jpg" />
+            <img src="assets/remotecontrol.jpg" alt="Image with a remotecontrol" />
             <div>
                 <h2>User manual for a remote control</h2>
                 <p>Caution: Before using a remote control, please read ...</p>
@@ -57,16 +57,16 @@
         </section>
 
         <section class="small-news">
-            <img src="juice.jpg" />
+            <img src="assets/juice.jpg" alt="Image with oranges" />
             <div>
-                
+
                 <h2>Freshly squeezed and cold-pressed juice – the difference</h2>
 
             </div>
         </section>
 
         <section class="small-news">
-            <img src="rose2.jpg" />
+            <img src="assets/rose.jpg" alt="Image with a rose" />
             <div>
                 <h2>Poem: Rose is a rose</h2>
                 <p>Rose is a rose is a rose is a rose. Rose is a rose is a rose is a rose. Rose is a rose ...</p>
@@ -74,34 +74,36 @@
         </section>
 
         <section class="small-news">
-            <img src="gravel .jpg" />
+            <img src="assets/gravel.jpg" alt="Image with gravel" />
 
             <div>
                 <h2>Different types of gravel</h2>
-                <p>There are many types of gravel: Pea gravel, 
+                <p>There are many types of gravel: Pea gravel,
                     River rock, Aquarium gravel ... </p>
             </div>
         </section>
         <section class="small-news">
-            <img src="wall paint.jpg" />
+            <img src="assets/wallpaint.jpg" alt="Image with wallpaint" />
             <div>
                 <h2>Wall paint drying times: A comprehensive guide</h2>
                 <p>An in-depth exploration of various wall paint drying times ...</p>
             </div>
         </section>
         <section class="small-news">
-            <img src="stapler.jpg" />
+            <img src="assets/stapler.jpg" alt="Image of a stapler" />
             <div>
                 <h2>A catalog of stapler models throughout history</h2>
-                <p>An exhaustive list and analysis of stapler models from the past century, examining their design evolution and functionality.</p>
+                <p>An exhaustive list and analysis of stapler models from the past century, examining their design
+                    evolution and functionality.</p>
             </div>
         </section>
 
         <section class="small-news">
-            <img src="clock.jpg" />
+            <img src="assets/clock.jpg" alt="Image with a clock" />
             <div>
                 <h2>The Study of Clock Ticking Sounds in Different Environments</h2>
-                <p>An academic investigation into the auditory characteristics of clock ticking sounds, considering factors like room acoustics ...</p>
+                <p>An academic investigation into the auditory characteristics of clock ticking sounds, considering
+                    factors like room acoustics ...</p>
             </div>
         </section>
 
