--- a/code/index.html
+++ b/code/index.html
@@ -1,114 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>The Daily Sleep</title>
     <link rel="stylesheet" href="./style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <img class="logo" src="assets/thedailysleep.png" alt="logo with letters zzz">
+      <img
+        class="logo"
+        src="assets/thedailysleep.png"
+        alt="logo with letters zzz"
+      />
 
-        <h1>The Daily Sleep</h1>
-
+      <h1>The Daily Sleep</h1>
     </header>
 
     <nav class="links">
-        <ol>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Merch</a></li>
-            <li><a href="#">About</a></li>
-        </ol>
+      <ol>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Merch</a></li>
+        <li><a href="#">About</a></li>
+      </ol>
     </nav>
-    <marquee class="sheep">
-        🐑
-    </marquee>
-
+    <marquee class="sheep"> 🐑 </marquee>
 
     <section class="intro">
-        <img class="intro-image" src="assets/laundry.jpg" alt="Image with a laundry machine" />
-        <div class="intro-text">
-            <h2>Short story: Laundry day</h2>
-            <p>She always did her laundry on mondays. Monday, the first day of the week ... </p>
-
-        </div>
+      <img
+        class="intro-image"
+        src="assets/laundry.jpg"
+        alt="Image with a laundry machine"
+      />
+      <div class="intro-text">
+        <h2>Short story: Laundry day</h2>
+        <p>
+          She always did her laundry on mondays. Monday, the first day of the
+          week ...
+        </p>
+      </div>
     </section>
     <!--Content below is called "Feed".-->
     <div class="feed">
-        <section class="small-news">
-            <img src="assets/grey.jpg" alt="Image with grey color" />
+      <section class="small-news">
+        <img src="assets/grey.jpg" alt="Image with grey color" />
 
-            <div>
-                <h2>The color grey</h2>
-                <p>Grey is an intermediate color between black and white. It is a neutral or achromatic color, meaning
-                    literally that it is "without color”...</p>
-            </div>
-        </section>
+        <div>
+          <h2>The color grey</h2>
+          <p>
+            Grey is an intermediate color between black and white. It is a
+            neutral or achromatic color, meaning literally that it is "without
+            color”...
+          </p>
+        </div>
+      </section>
 
-        <section class="small-news">
-            <img src="assets/remotecontrol.jpg" alt="Image with a remotecontrol" />
-            <div>
-                <h2>User manual for a remote control</h2>
-                <p>Caution: Before using a remote control, please read ...</p>
-            </div>
-        </section>
+      <section class="small-news">
+        <img src="assets/remotecontrol.jpg" alt="Image with a remotecontrol" />
+        <div>
+          <h2>User manual for a remote control</h2>
+          <p>Caution: Before using a remote control, please read ...</p>
+        </div>
+      </section>
 
-        <section class="small-news">
-            <img src="assets/juice.jpg" alt="Image with oranges" />
-            <div>
+      <section class="small-news">
+        <img src="assets/juice.jpg" alt="Image with oranges" />
+        <div>
+          <h2>Freshly squeezed and cold-pressed juice – the difference</h2>
+        </div>
+      </section>
 
-                <h2>Freshly squeezed and cold-pressed juice – the difference</h2>
+      <section class="small-news">
+        <img src="assets/rose.jpg" alt="Image with a rose" />
+        <div>
+          <h2>Poem: Rose is a rose</h2>
+          <p>
+            Rose is a rose is a rose is a rose. Rose is a rose is a rose is a
+            rose. Rose is a rose ...
+          </p>
+        </div>
+      </section>
 
-            </div>
-        </section>
+      <section class="small-news">
+        <img src="assets/gravel.jpg" alt="Image with gravel" />
 
-        <section class="small-news">
-            <img src="assets/rose.jpg" alt="Image with a rose" />
-            <div>
-                <h2>Poem: Rose is a rose</h2>
-                <p>Rose is a rose is a rose is a rose. Rose is a rose is a rose is a rose. Rose is a rose ...</p>
-            </div>
-        </section>
+        <div>
+          <h2>Different types of gravel</h2>
+          <p>
+            There are many types of gravel: Pea gravel, River rock, Aquarium
+            gravel ...
+          </p>
+        </div>
+      </section>
+      <section class="small-news">
+        <img src="assets/wallpaint.jpg" alt="Image with wallpaint" />
+        <div>
+          <h2>Wall paint drying times: A comprehensive guide</h2>
+          <p>An in-depth exploration of various wall paint drying times ...</p>
+        </div>
+      </section>
+      <section class="small-news">
+        <img src="assets/stapler.jpg" alt="Image of a stapler" />
+        <div>
+          <h2>A catalog of stapler models throughout history</h2>
+          <p>
+            An exhaustive list and analysis of stapler models from the past
+            century, examining their design evolution and functionality.
+          </p>
+        </div>
+      </section>
 
-        <section class="small-news">
-            <img src="assets/gravel.jpg" alt="Image with gravel" />
-
-            <div>
-                <h2>Different types of gravel</h2>
-                <p>There are many types of gravel: Pea gravel,
-                    River rock, Aquarium gravel ... </p>
-            </div>
-        </section>
-        <section class="small-news">
-            <img src="assets/wallpaint.jpg" alt="Image with wallpaint" />
-            <div>
-                <h2>Wall paint drying times: A comprehensive guide</h2>
-                <p>An in-depth exploration of various wall paint drying times ...</p>
-            </div>
-        </section>
-        <section class="small-news">
-            <img src="assets/stapler.jpg" alt="Image of a stapler" />
-            <div>
-                <h2>A catalog of stapler models throughout history</h2>
-                <p>An exhaustive list and analysis of stapler models from the past century, examining their design
-                    evolution and functionality.</p>
-            </div>
-        </section>
-
-        <section class="small-news">
-            <img src="assets/clock.jpg" alt="Image with a clock" />
-            <div>
-                <h2>The Study of Clock Ticking Sounds in Different Environments</h2>
-                <p>An academic investigation into the auditory characteristics of clock ticking sounds, considering
-                    factors like room acoustics ...</p>
-            </div>
-        </section>
-
-
+      <section class="small-news">
+        <img src="assets/clock.jpg" alt="Image with a clock" />
+        <div>
+          <h2>The Study of Clock Ticking Sounds in Different Environments</h2>
+          <p>
+            An academic investigation into the auditory characteristics of clock
+            ticking sounds, considering factors like room acoustics ...
+          </p>
+        </div>
+      </section>
     </div>
-</body>
-
+  </body>
 </html>
