--- a/code/index.html
+++ b/code/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>The Daily Sleep</title>
-    <link rel="stylesheet" href="./style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
@@ -12,8 +12,8 @@
       <img
         class="logo"
         src="assets/thedailysleep.png"
-        alt="logo with letters zzz"
-      />
+        alt=
+      >
 
       <h1>The Daily Sleep</h1>
     </header>
@@ -32,7 +32,7 @@
         class="intro-image"
         src="assets/laundry.jpg"
         alt="Image with a laundry machine"
-      />
+      >
       <div class="intro-text">
         <h2>Short story: Laundry day</h2>
         <p>
@@ -45,7 +45,6 @@
     <div class="feed">
       <section class="small-news">
         <img src="assets/grey.jpg" alt="Image with grey color" />
-
         <div>
           <h2>The color grey</h2>
           <p>
